--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env*.local
 
 # vercel
 .vercel
@@ -39,3 +40,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Ignore uploaded files but keep folders
+public/uploads/*
+!public/uploads/.gitkeep
+!public/uploads/*/
+public/uploads/*/*
+!public/uploads/*/.gitkeep
