--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "server": "node src/server/index.js",
+    "dev:server": "nodemon src/server/index.js"
   },
   "dependencies": {
-    "imagekit": "^4.1.3",
+    "@types/canvas-confetti": "^1.6.4",
+    "axios": "^1.7.8",
+    "canvas-confetti": "^1.9.3",
+    "express": "^4.18.2",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "@types/react": "18.3.12",
+    "autoprefixer": "^10.4.16",
+    "nodemon": "^2.0.22",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
