--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@types/canvas-confetti": "^1.6.4",
+    "@types/node": "^22.10.1",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.7.8",
     "canvas-confetti": "^1.9.3",
     "express": "^4.18.2",
@@ -18,7 +20,8 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.7.1"
+    "tsparticles": "^3.7.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/react": "18.3.12",
