--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-image-crop": "^11.0.7",
     "react-tsparticles": "^2.12.2",
     "tsparticles": "^3.7.1",
     "uuid": "^11.0.3"
