--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.16",
     "nodemon": "^2.0.22",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "5.7.2"
   }
 }
