--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.8",
     "canvas-confetti": "^1.9.3",
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "mongoose": "^8.8.3",
+    "multer": "^1.4.5-lts.1",
     "next": "15.0.3",
+    "path": "^0.12.7",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-datepicker": "^7.5.0",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-image-crop": "^11.0.7",
     "react-tsparticles": "^2.12.2",
