--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
     "next": "15.0.3",
+    "node-cron": "^3.0.3",
     "path": "^0.12.7",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-datepicker": "^7.5.0",
