--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@types/canvas-confetti": "^1.6.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.10.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.8",
     "canvas-confetti": "^1.9.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "js-cookie": "^3.0.5",
     "mongoose": "^8.8.3",
     "multer": "^1.4.5-lts.1",
     "next": "15.0.3",
